Avatar spacing fix in inline person items.

--- a/client/css/_persons.styl
+++ b/client/css/_persons.styl
@@ -10,7 +10,6 @@
 
   .avatar
     min-width 1.1em
-    margin-right 1px
 
 .item-list
   .person.catalog-item
